# kube-controller-rs

./: Cargo.toml  example.yaml
src/: lib.rs  main.rs
