[package]
name = "kube-controller-rs"
version = "0.1.0"
authors = ["Jacobious52 <jacobgonzalez5252@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.42.0"
kube-runtime = "0.42.0"
kube-derive = "0.42.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_18"] }
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
thiserror = "1"
log = "0.4"
pretty_env_logger = "0.4"
